# dockertest-server

./: CHANGELOG.md  Cargo.toml  README.md  typos.toml
.github/workflows/: ci.yml
src/: common.rs  lib.rs  server.rs  servers.rs  test.rs  vault.rs
src/servers/: auth.rs  cloud.rs  hashi.rs  web.rs
src/servers/auth/: oidc.rs
src/servers/cloud/: localstack.rs
src/servers/database/: postgres.rs  redis.rs
src/servers/hashi/: consul.rs  counting.rs  vault.rs
src/servers/web/: nginx.rs
src/servers/webserver/: generate-cert.sh  nginx.rs  openssl-csr.cnf  openssl-signing.cnf
tests/: integration.rs  nginx.rs
