[package]
name = "dockertest-server"
version = "0.1.2"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
description = "A test framework built around dockertest for testing against server containers."
license = "MIT"
readme = "README.md"
repository = "https://github.com/dockertest-server/vaultrs-test"
keywords = ["Test", "Docker", "Suite", "Framework"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
auth = []
database = []
hashi = []

[dependencies]
derive_builder = "0.10.2"
dockertest = "0.2.1"
futures = "0.3.17"
rand = "0.8.4"
type-map = "0.5.0"

[dev-dependencies]
env_logger = "0.9.0"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
test-env-log = { version = "0.2.7", features = ["trace"] }
tokio-postgres = "0.7.2"
tracing = {version = "0.1.27", features = ["log"] }
tracing-subscriber = {version = "0.2.17", default-features = false, features = ["env-filter", "fmt"]}