[package]
name = "dockertest-server"
version = "0.1.7"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
description = "A test framework built around dockertest for testing against server containers."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmgilman/dockertest-server"
keywords = ["Test", "Docker", "Suite", "Framework"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
auth = []
database = []
hashi = []
cloud = []
webserver = []

[dependencies]
derive_builder = "0.11.2"
dockertest = "0.3.0"
futures = "0.3.21"
rand = "0.8.5"
type-map = "0.5.0"
tempfile = "3.3.0"

[dev-dependencies]
env_logger = "0.9.0"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
test-log = { version = "0.2.10", features = ["trace"] }
tokio-postgres = "0.7.6"
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", default-features = false, features = ["env-filter", "fmt"] }
